--- a/style.css
+++ b/style.css
@@ -24,16 +24,19 @@ h3 {
 
 section {
     display: flex;
-    margin-top: 50px;
 }
 
 .half-width {
     width: 50%;
-    padding-left: 5%;
+    padding-left: 8%;
 }
 
 .half-width img {
     width: 70%;
+}
+
+.top-mergin {
+    margin-top: 150px;
 }
 
 .link-button {
@@ -46,4 +49,9 @@ section {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+}
+
+.top-banner {
+    background-image: url(img/top-banner.png);
+    background-repeat: no-repeat;
 }
