--- a/style.css
+++ b/style.css
@@ -19,16 +19,17 @@ h3 {
 }
 
 .orange-color {
-    color: orangered;
+    color: tomato;
 }
 
 section {
     display: flex;
+    margin-bottom: 100px;
+    padding: 0px 100px;
 }
 
 .half-width {
     width: 50%;
-    padding-left: 8%;
 }
 
 .half-width img {
@@ -54,4 +55,10 @@ section {
 .top-banner {
     background-image: url(img/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big {
+    background-image: url(img/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
