--- a/style.css
+++ b/style.css
@@ -1,64 +1,117 @@
-body {
-    margin: 0;
-    font-family: 'Poppins', sans-serif;
-}
-
-h1 {
-    font-size: 42px;
-    line-height: 42px;
-}
-
-h2 {
-    font-size: 36px;
-    line-height: 36px;
-}
-
-h3 {
-    font-size: 32px;
-    line-height: 32px;
-}
-
-.orange-color {
-    color: tomato;
-}
-
-section {
-    display: flex;
-    margin-bottom: 100px;
-    padding: 0px 100px;
-}
-
-.half-width {
-    width: 50%;
-}
-
-.half-width img {
-    width: 70%;
-}
-
-.top-mergin {
-    margin-top: 150px;
-}
-
-.link-button {
-    text-decoration: none;
-    padding: 10px 40px;
-    background-image: linear-gradient(45deg, lightsalmon, tomato);
-    color: white;
-    border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -ms-border-radius: 5px;
-    -o-border-radius: 5px;
-}
-
-.top-banner {
-    background-image: url(img/top-banner.png);
-    background-repeat: no-repeat;
-}
-
-.dream-big {
-    background-image: url(img/dream-bg.png);
-    background-repeat: no-repeat;
-    background-position: right;
-}
+    body {
+        margin: 0;
+        font-family: 'Poppins', sans-serif;
+    }
+    
+    h1 {
+        font-size: 42px;
+        line-height: 42px;
+    }
+    
+    h2 {
+        font-size: 36px;
+        line-height: 36px;
+    }
+    
+    h3 {
+        font-size: 32px;
+        line-height: 32px;
+    }
+    
+    h4 {
+        font-size: 20px;
+        line-height: 20px;
+        color: tomato;
+    }
+    
+    .orange-color {
+        color: tomato;
+    }
+    
+    .flexible-container {
+        display: flex;
+        margin-bottom: 100px;
+        padding: 0px 100px;
+    }
+    
+    .half-width {
+        width: 50%;
+    }
+    
+    .half-width img {
+        width: 70%;
+    }
+    
+    .top-mergin {
+        margin-top: 150px;
+    }
+    
+    .link-button {
+        text-decoration: none;
+        padding: 10px 40px;
+        background-image: linear-gradient(45deg, lightsalmon, tomato);
+        color: white;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+        margin: 20px 0;
+    }
+    
+    .top-banner {
+        background-image: url(img/top-banner.png);
+        background-repeat: no-repeat;
+    }
+    
+    .dream-big {
+        background-image: url(img/dream-bg.png);
+        background-repeat: no-repeat;
+        background-position: right;
+    }
+    
+    .experience-title {
+        text-align: center;
+    }
+    
+    hr {
+        width: 100px;
+        border-bottom: 2px solid tomato;
+        margin-bottom: 50px;
+    }
+    
+    .about-hr {
+        text-align: left;
+        display: inline-block;
+        margin-bottom: 0;
+    }
+    
+    .experience-item {
+        box-shadow: 10px 10px 40px gray;
+        padding: 0 20px;
+        margin: 20px;
+        text-align: justify;
+    }
+    
+    .experience-area {
+        background-image: url(img/exp-bg.png);
+        background-repeat: no-repeat;
+        background-position: left;
+    }
+    
+    #web-dev-experience {
+        border-left: 7px solid;
+        border-image: linear-gradient(lightsalmon, tomato);
+        border-image-slice: 1;
+    }
+    
+    footer .footer-text {
+        text-align: center;
+        color: gray;
+    }
+    
+    .about-image {
+        border: 7px solid;
+        border-image: linear-gradient(lightsalmon, tomato);
+        border-image-slice: 1;
+    }
